--- a/Styles/Main/style_rtl.css
+++ b/Styles/Main/style_rtl.css
@@ -8,6 +8,7 @@
 @import url("../UserCategoryPage/user_category_page_rtl.css");
 @import url("../ContextMenu/context_menu_rtl.css");
 @import url("../Animation/animation_rtl.css");
+@import url("../SelectBar/select_bar_rtl.css");
 
 @font-face {
   font-family: vazir;
@@ -20,6 +21,14 @@
 @font-face {
   font-family: dastnevis;
   src: url(../../Fonts/danstevis.otf);
+}
+#overlay {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2000;
+  background-color: #000;
+  opacity: 0;
 }
 #preloader {
   width: 100%;
@@ -40,7 +49,7 @@
 }
 #preloader-text {
   color: #dad6d6;
-  font-family: SpaceGroteskMed;
+  font-family: vazir;
   font-size: 1.8em;
 }
 button {
