--- a/Styles/Settings/settings_ltr.css
+++ b/Styles/Settings/settings_ltr.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 200;
 }
 #settings-header {
   position: relative;
@@ -65,6 +66,35 @@
   border-radius: 5px;
   padding: 10px;
   margin: 10px 0;
+}
+input[type="range"] {
+  appearance: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  height: 5px;
+  border-radius: 10px;
+}
+input[type="range"]::-moz-range-track {
+  height: 7px;
+  border-radius: 20px;
+}
+input[type="range"]::-webkit-slider-thumb {
+  appearance: none;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  border: 0;
+  outline: 0;
+}
+input[type="range"]::-moz-range-thumb {
+  appearance: none;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  border: 0;
+  outline: 0;
 }
 .setting-select-box {
   position: absolute;
