--- a/Styles/Modal/modal_rtl.css
+++ b/Styles/Modal/modal_rtl.css
@@ -169,20 +169,75 @@
   width: 95%;
 }
 #select-category-section {
+  position: relative;
   order: 6;
-  padding: 3px 0 0 1px;
+  padding-top: 3px 0 0 1px;
 }
-#select-category-select-box {
+.select-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  background-color: #dad6d6;
+  cursor: pointer;
   height: 50px;
   width: 100%;
-  font-family: vazir;
-  font-size: 1.1em;
-  background-color: #dad6d6;
-  color: #1b1a1d;
-  text-align: center;
   border: 0;
   border-radius: 5px;
-  border-top-right-radius: 0;
+}
+.select-box-text {
+  font-family: vazir;
+  font-size: 1.1em;
+  text-align: center;
+}
+.options-container {
+  width: 100%;
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  top: 50px;
+  background-color: #dad6d6;
+  overflow: hidden;
+  border-radius: 5px;
+  margin-top: 1px;
+}
+.show-select-box {
+  display: flex;
+}
+.option {
+  width: calc(100% - 16px);
+  padding: 8px;
+  margin: 2px 0;
+  cursor: pointer !important;
+  font-size: 1em;
+  font-family: vazir;
+  text-align: auto;
+  /* border: 1px solid #1b1a1d; */
+}
+.option:hover {
+  background-color: #cac7c7;
+}
+#select-box-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: -1px;
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  background-color: #3a4166;
+}
+#select-box-icon {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  transition: transform 0.3s;
+}
+.rotate-icon {
+  transform: rotate(180deg);
 }
 .task-input:focus {
   outline: 0;
@@ -308,14 +363,11 @@
   height: 35px;
   background: none;
 }
-.slide-left-button img {
-  width: 80%;
-  height: 80%;
-  object-fit: contain;
-}
+.slide-left-button img,
 .slide-right-button img {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 #pick-icon-section {
   order: 4;
