--- a/Styles/TaskSection/task_section_ltr.css
+++ b/Styles/TaskSection/task_section_ltr.css
@@ -133,7 +133,8 @@
   margin: 15px 0;
   border-radius: 10px;
 }
-
+/* .selected-task{
+} */
 /* Task Title */
 .task-title {
   order: 3;
@@ -171,6 +172,7 @@
   order: 1;
   padding: 3px 5px;
   font-size: 1em;
+  direction: ltr;
 }
 
 /* Select Task Checkbox */
