--- a/Styles/Settings/settings_ltr.css
+++ b/Styles/Settings/settings_ltr.css
@@ -4,7 +4,7 @@
   height: 100%;
   position: absolute;
   right: -100%;
-  transition: transform 0.8s ease-in-out;
+  transition: all 0.5s ease-in-out;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -38,10 +38,10 @@
   height: 100%;
 }
 .setting-in {
-  transform: translateX(-480%);
+  right: 0 !important;
 }
 .setting-out {
-  transform: translateX(480%);
+  right: -100% !important;
 }
 #setting-items-container {
   display: flex;
