--- a/Styles/TaskSection/task_section_rtl.css
+++ b/Styles/TaskSection/task_section_rtl.css
@@ -137,7 +137,7 @@
   border-radius: 10px;
 }
 .selected-task {
-  cursor: pointer !important;
+  cursor: pointer;
 }
 /* Task Title */
 .task-title {
