--- a/Styles/Settings/settings_rtl.css
+++ b/Styles/Settings/settings_rtl.css
@@ -4,7 +4,7 @@
   height: 100%;
   position: absolute;
   left: -100%;
-  transition: transform 0.8s ease-in-out;
+  transition: all 0.5s ease-in-out;
   display: flex;
   flex-direction: column;
   justify-content: center;
