--- a/Styles/Modal/modal_rtl.css
+++ b/Styles/Modal/modal_rtl.css
@@ -249,8 +249,8 @@
 }
 #task-date-input,
 #edit-date-input {
-  font-family: dastnevis;
-  font-size: 1.5em;
+  font-family: Vazir;
+  font-size: 1.2em;
 }
 .task-input {
   height: 45px;
