--- a/Styles/Main/style_rtl.css
+++ b/Styles/Main/style_rtl.css
@@ -5,10 +5,12 @@
 @import url("../Modal/modal_rtl.css");
 @import url("../Settings/settings_rtl.css");
 @import url("../TrashSection/trash_rtl.css");
-@import url("../UserCategoryPage/user_category_page_rtl.css");
 @import url("../ContextMenu/context_menu_rtl.css");
 @import url("../Animation/animation_rtl.css");
 @import url("../SelectBar/select_bar_rtl.css");
+@import url("../Window/window_rtl.css");
+@import url("../WindowHeaders/window_headers_rtl.css");
+@import url("../Notes/notes_rtl.css");
 
 @font-face {
   font-family: vazir;
