--- a/Styles/Themes/theme_dark.css
+++ b/Styles/Themes/theme_dark.css
@@ -20,7 +20,7 @@
 .Dark #select-all-section {
   color: var(--white);
 }
-.Dark #tasks-section {
+.Dark .window {
   background-color: var(--dark-main);
 }
 .Dark .sort-buttons {
@@ -60,6 +60,12 @@
 .Dark .side-bar-item {
   background: var(--black);
   color: var(--white);
+}
+.Dark #add-notes-btn {
+  background-color: var(--green) !important;
+}
+.Dark #add-notes-btn-text {
+  color: var(--white) !important;
 }
 .Dark #full-date {
   color: var(--white);
@@ -114,6 +120,7 @@
 }
 .Dark #modal-container {
   background-color: var(--black);
+  border: 1px solid var(--white);
 }
 .Dark #modal-text {
   color: var(--white);
@@ -148,6 +155,43 @@
 .Dark .modal-text-area {
   background-color: var(--grey);
   color: var(--white);
+}
+.Dark #note-text-area {
+  background-color: var(--white);
+  color: var(--black);
+}
+.Dark .note-container {
+  background-color: var(--dark-task-container-bgc);
+}
+.Dark .note-title {
+  color: var(--white);
+  background-color: var(--black);
+}
+.Dark .note-text {
+  color: var(--white);
+}
+.Dark .view-note-btn {
+  background-color: var(--green);
+  color: var(--white);
+}
+/* Read note modal */
+.Dark .info-container-row {
+  border-bottom: 2px solid var(--white);
+  color: var(--white);
+}
+.Dark .note-modal-text {
+  appearance: none;
+  color: var(--black);
+  background-color: var(--white);
+  scrollbar-color: var(--green) var(--actual-white);
+}
+.Dark .note-modal-text::-webkit-scrollbar-track {
+  background-color: var(--actual-white);
+  border-radius: 20px;
+}
+.Dark .note-modal-text::-webkit-scrollbar-thumb {
+  background-color: var(--green);
+  border-radius: 20px;
 }
 .Dark #select-category-select-box {
   background-color: var(--white);
@@ -199,6 +243,9 @@ body.Dark {
 .Dark .pick-day-button {
   color: var(--white);
 }
+.Dark .selected-day {
+  background-color: var(--green);
+}
 .Dark #pick-today-button,
 .Dark #pick-tomorrow-button,
 .Dark #pick-in-2-days-button {
@@ -226,26 +273,14 @@ body.Dark {
 .Dark #display-text {
   color: var(--white);
 }
-.Dark #trash-bin-section {
-  background-color: var(--dark-main);
-}
-.Dark #trash-bin-header {
-  background-color: var(--black);
-}
-.Dark #trash-bin-title {
-  color: var(--white);
-}
 .Dark .trashed-task-badge {
   color: var(--white);
   background-color: var(--red);
 }
-.Dark #user-category-page {
-  background-color: var(--dark-main);
-}
-.Dark #user-category-page-header {
+.Dark .window-header {
   background-color: var(--black);
 }
-.Dark #user-category-page-title {
+.Dark .header-title {
   color: var(--white);
 }
 .Dark .checkmark {
