--- a/Styles/MessageBox/msg_box_rtl.css
+++ b/Styles/MessageBox/msg_box_rtl.css
@@ -14,6 +14,7 @@
   z-index: 1000;
   font-family: Vazir;
   overflow: hidden;
+  max-width: 400px;
 }
 .msg-type-wrapper {
   display: flex;
@@ -28,6 +29,8 @@
 .msg-text {
   font-size: 18px;
   padding: 15px;
+  max-width: 100%;
+  line-break: normal;
 }
 .msg-type-icon {
   width: 30px;
