--- a/Styles/WindowHeaders/window_headers_rtl.css
+++ b/Styles/WindowHeaders/window_headers_rtl.css
@@ -2,9 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  width: calc(50% - 40px);
+  width: 70%;
   margin: 10px 20px 15px 0;
-  padding: 10px;
+  padding: 15px;
   border-radius: 5px;
   overflow: hidden;
 }
