--- a/Styles/Main/style_ltr.css
+++ b/Styles/Main/style_ltr.css
@@ -29,6 +29,11 @@
 * {
   font-family: "Inter", "vazir";
 }
+.disable-selection {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
 #overlay {
   position: fixed;
   width: 100vw;
