--- a/Styles/Main/style_rtl.css
+++ b/Styles/Main/style_rtl.css
@@ -26,6 +26,11 @@
   font-family: dastnevis;
   src: url(../../Fonts/danstevis.otf);
 }
+.disable-selection {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
 #overlay {
   position: fixed;
   width: 100vw;
