--- a/Styles/Modal/modal_ltr.css
+++ b/Styles/Modal/modal_ltr.css
@@ -5,15 +5,23 @@
   align-items: center;
   position: absolute;
   top: 100px;
+  left: 50%;
   z-index: 100;
   width: 350px;
   height: fit-content;
   padding: 10px;
-  border-top-left-radius: 4px;
-  border-bottom-right-radius: 4px;
+  border-width: 1px;
+  border-style: solid;
+}
+.date-input {
+  cursor: pointer;
+}
+.backup-modal-options {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .modal-sub-page {
-  order: 1;
   width: calc(100% - 30px);
   padding: 0 15px 15px 15px;
   display: flex;
@@ -47,8 +55,8 @@
   text-align: justify;
   font-size: 1em;
 }
-.copy-to-clipboard-button,
-.restore-button {
+.copy-to-clipboard-btn,
+.restore-btn {
   width: 100%;
   height: 40px;
   font-size: 1em;
@@ -57,15 +65,7 @@
   border-top-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-.modal-buttons-container {
-  order: 2;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-}
-.modal-button {
+.modal-btn {
   width: 100%;
   height: 60px;
   padding: 10px;
@@ -74,7 +74,7 @@
   border-top-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-.modal-button-text {
+.modal-btn-text {
   font-size: 1em;
 }
 .close-btn {
@@ -92,13 +92,11 @@
   height: 100%;
 }
 .modal-text {
-  order: 2;
   font-size: 1em;
   padding: 10px;
   text-align: center;
 }
 .move-to-trash-container {
-  order: 5;
   width: calc(100% - 20px);
   padding: 0 10px;
   display: flex;
@@ -106,15 +104,10 @@
   justify-content: flex-start;
   margin: 10px 0;
 }
-.move-to-trash-checkbox {
-  order: 1;
-}
 .move-to-trash-text {
-  order: 2;
   font-size: 1em;
 }
-.modal-button-container {
-  order: 7;
+.modal-btn-container {
   bottom: 0;
   width: 100%;
   display: flex;
@@ -131,12 +124,6 @@
   border-bottom-right-radius: 4px;
   transition: font-size 0.5s;
   margin: 8px;
-}
-.cancel-btn {
-  order: 2;
-}
-.confirm-btn {
-  order: 1;
 }
 .task-title-section,
 .note-title-section .task-date-section,
@@ -155,7 +142,6 @@
 }
 .select-category-section {
   position: relative;
-  order: 6;
   padding-top: 3px 0 0 1px;
 }
 .select-box {
@@ -277,7 +263,6 @@
   z-index: 50;
 }
 .modal-inputs-container {
-  order: 2;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -306,7 +291,6 @@
   outline: 0;
 }
 .pick-color-section {
-  order: 3;
   width: 100%;
   position: relative;
   display: flex;
@@ -314,7 +298,31 @@
   align-items: center;
   margin: 10px 0;
 }
-.slide-left-button {
+.color-slider,
+.icon-slider {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.colors-container {
+  width: calc(100% - 70px);
+  display: grid;
+  grid-template-columns: repeat(24, 1fr);
+  overflow-x: scroll;
+  scrollbar-width: none;
+  padding: 8px 0;
+}
+.color-pallet {
+  width: 35px;
+  height: 35px;
+  margin: 0 8px;
+  border: 0;
+  outline: 0;
+  border-radius: 50%;
+}
+.slide-left-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -324,7 +332,7 @@
   height: 35px;
   background: none;
 }
-.slide-right-button {
+.slide-right-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -334,37 +342,17 @@
   height: 35px;
   background: none;
 }
-.slide-left-button img,
-.slide-right-button img {
+.slide-left-btn img,
+.slide-right-btn img {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
 
-.colors-container {
-  width: calc(100% - 70px);
-  display: grid;
-  grid-template-columns: repeat(24, 1fr);
-  overflow-x: scroll;
-  scrollbar-width: none;
-  padding: 35px 0 24px 0;
-}
-.color-pallet {
-  width: 35px;
-  height: 35px;
-  margin: 0 8px;
-  border: 0;
-  outline: 0;
-  border-radius: 50%;
-  box-sizing: border-box;
-}
 .pick-icon-section {
-  order: 4;
   width: 100%;
-  position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: baseline;
   align-items: center;
   margin: 20px 0 10px 0;
 }
@@ -374,7 +362,7 @@
   grid-template-columns: repeat(18, 1fr);
   overflow-x: scroll;
   scrollbar-width: none;
-  padding: 35px 0 24px 0;
+  padding: 8px 0;
 }
 .pick-category-icon-button {
   display: flex;
@@ -386,6 +374,7 @@
   border: 0;
   outline: 0;
   border-radius: 50%;
+  background-color: 0.264261;
 }
 .pick-category-icon {
   width: 60%;
