--- a/Styles/Main/style_rtl.css
+++ b/Styles/Main/style_rtl.css
@@ -26,6 +26,13 @@
   font-family: dastnevis;
   src: url(../../Fonts/danstevis.otf);
 }
+#background {
+  position: absolute;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  opacity: 0.1;
+}
 .disable-selection {
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
